# scheduler

./: Cargo.toml  README.md
benches/: queue_bench.rs
logs/: scheduler.log.2026-02-22
src/: engine.rs  job.rs  lib.rs  main.rs  persistence_manager.rs  queue.rs  telemetry.rs  tui.rs  worker.rs
tests/: engine_tests.rs  persistence_manager_tests.rs  queue_tests.rs  worker_tests.rs
