[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.21.0", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.43"
crossterm = "0.28"
ratatui = "0.29"
sysinfo = "0.38.2"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
